// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tooltip demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        style="position: absolute; margin-top: 60px;"
      >
        <span
          aria-describedby="test-id"
          class="ant-tooltip-open"
        >
          <!---->
        </span>
        <!---->
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element (including arrows, content elements) with absolute positioning, z-index, block display, max width, visibility, transform origin and arrow background color
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  container
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Content element with min width and height, padding, color, text alignment, background color, border radius, shadow and border styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  arrow
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Arrow element with width, height, position, color and border styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`tooltip demo > renders arrow correctly 1`] = `
<div
  data-v-app=""
>
  <div
    aria-label="segmented control"
    class="ant-segmented css-var-root css-var-root"
    role="radiogroup"
    size="middle"
    style="margin-bottom: 24px;"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <!---->
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="v-1"
          type="radio"
        />
        <div
          aria-checked="true"
          class="ant-segmented-item-label"
          role="radio"
          title="Show"
        >
          Show
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="v-1"
          type="radio"
        />
        <div
          aria-checked="false"
          class="ant-segmented-item-label"
          role="radio"
          title="Hide"
        >
          Hide
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="v-1"
          type="radio"
        />
        <div
          aria-checked="false"
          class="ant-segmented-item-label"
          role="radio"
          title="Center"
        >
          Center
        </div>
      </label>
    </div>
  </div>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-center ant-flex-vertical demo"
  >
    <div
      class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          TL
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Top
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          TR
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between"
      style="width: 432px;"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-vertical"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            LT
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            Left
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            LB
          </span>
          <!---->
        </button>
        <!---->
      </div>
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-vertical"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            RT
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            Right
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            RB
          </span>
          <!---->
        </button>
        <!---->
      </div>
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          BL
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Bottom
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          BR
        </span>
        <!---->
      </button>
      <!---->
    </div>
  </div>
</div>
`;

exports[`tooltip demo > renders auto-adjust-overflow correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
  data-v-500b41ab=""
>
  <h5
    class="ant-typography css-var-root"
  >
     With \`getPopupContainer\` 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h5>
  <div
    class="tooltip-overflow-container"
    data-v-500b41ab=""
  >
    <div
      class="tooltip-overflow-inner"
      data-v-500b41ab=""
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        data-v-500b41ab=""
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Adjust automatically / 自动调整
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        data-v-500b41ab=""
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Ignore / 不处理
        </span>
        <!---->
      </button>
      <!---->
    </div>
  </div>
  <h5
    class="ant-typography css-var-root"
  >
     Without \`getPopupContainer\` 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h5>
  <div
    class="tooltip-overflow-container"
    data-v-500b41ab=""
  >
    <div
      class="tooltip-overflow-inner"
      data-v-500b41ab=""
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        data-v-500b41ab=""
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Adjust automatically / 自动调整
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        data-v-500b41ab=""
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Ignore / 不处理
        </span>
        <!---->
      </button>
      <!---->
    </div>
  </div>
</div>
`;

exports[`tooltip demo > renders basic correctly 1`] = `
<div
  data-v-app=""
>
  <span>
    Tooltip will show on mouse enter.
  </span>
  <!---->
</div>
`;

exports[`tooltip demo > renders colorful correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Presets 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    style="flex-wrap: wrap;"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          pink
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          red
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          yellow
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          orange
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          cyan
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          green
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          blue
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          purple
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          geekblue
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          magenta
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          volcano
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          gold
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          lime
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
       Custom 
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
    style="flex-wrap: wrap;"
  >
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          #f50
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          #2db7f5
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          #87d068
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          #108ee9
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`tooltip demo > renders destroy-on-close correctly 1`] = `
<div
  data-v-app=""
>
  <span>
    Dom will destroyed when Tooltip close
  </span>
  <!---->
</div>
`;

exports[`tooltip demo > renders disabled correctly 1`] = `
<div
  data-v-app=""
>
  <button
    class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
      Enable
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`tooltip demo > renders disabled-children correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      disabled=""
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
         Disabled 
      </span>
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <input
      class="ant-input ant-input-disabled ant-input-outlined css-var-root ant-input-css-var"
      disabled=""
      placeholder="disabled"
      type="text"
      value=""
    />
    <!---->
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <div
      class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined ant-input-number-without-controls ant-input-number-disabled"
    >
      <!---->
      <!---->
      <input
        aria-valuenow="1"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        role="spinbutton"
        step="1"
        value="1"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-disabled ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
        />
      </span>
      <!---->
    </label>
    <!---->
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <!---->
    <div
      class="ant-select ant-select-outlined css-var-root ant-select-css-var ant-select-single ant-select-show-arrow ant-select-disabled"
    >
      <!---->
      <div
        class="ant-select-content ant-select-content-has-value"
        title="Option"
      >
        Option
        <input
          aria-autocomplete="list"
          aria-controls="test-id_list"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="test-id_list"
          autocomplete="off"
          class="ant-select-input"
          disabled=""
          id="test-id"
          readonly=""
          role="combobox"
          type="search"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
        <!---->
      </div>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`tooltip demo > renders placement correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-center ant-flex-vertical demo"
  >
    <div
      class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          TL
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Top
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          TR
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between"
      style="width: 432px;"
    >
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-vertical"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            LT
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            Left
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            LB
          </span>
          <!---->
        </button>
        <!---->
      </div>
      <div
        class="ant-flex css-var-root ant-flex-align-center ant-flex-vertical"
      >
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            RT
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            Right
          </span>
          <!---->
        </button>
        <!---->
        <button
          class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <transition-stub
            appear="false"
            css="true"
            name="ant-btn-loading-icon-motion"
            persisted="false"
          >
            <!---->
          </transition-stub>
          <span>
            RB
          </span>
          <!---->
        </button>
        <!---->
      </div>
    </div>
    <div
      class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          BL
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          Bottom
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
          BR
        </span>
        <!---->
      </button>
      <!---->
    </div>
  </div>
</div>
`;

exports[`tooltip demo > renders render-panel correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-tooltip-css-var css-var-root ant-tooltip ant-tooltip-pure ant-tooltip-placement-top ant-tooltip-pink"
  >
    <div
      class="ant-tooltip-arrow"
    />
    <div
      class="ant-tooltip-container"
      color="pink"
      placement="top"
      role="tooltip"
      title="Hello, Pink Pure Panel!"
    >
      Hello, Pink Pure Panel!
    </div>
  </div>
  <div
    class="ant-tooltip-css-var css-var-root ant-tooltip ant-tooltip-pure ant-tooltip-placement-top"
    style="--ant-tooltip-arrow-background-color: #f50;"
  >
    <div
      class="ant-tooltip-arrow"
    />
    <div
      class="ant-tooltip-container"
      color="#f50"
      placement="top"
      role="tooltip"
      style="background: rgb(255, 85, 0); --ant-tooltip-overlay-color: #FFF;"
      title="Hello, Customize Color Pure Panel!"
    >
      Hello, Customize Color Pure Panel!
    </div>
  </div>
  <div
    class="ant-tooltip-css-var css-var-root ant-tooltip ant-tooltip-pure ant-tooltip-placement-bottomLeft"
  >
    <div
      class="ant-tooltip-arrow"
    />
    <div
      class="ant-tooltip-container"
      placement="bottomLeft"
      role="tooltip"
      title="Hello, Pure Panel!"
    >
      Hello, Pure Panel!
    </div>
  </div>
</div>
`;

exports[`tooltip demo > renders smooth-transition correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
  >
    <div
      class="ant-flex css-var-root ant-flex-justify-center ant-flex-gap-small"
    >
      <button
        class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
           Button 
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
           Button 
        </span>
        <!---->
      </button>
      <!---->
    </div>
    <div
      class="ant-flex css-var-root ant-flex-justify-center ant-flex-gap-small"
    >
      <button
        class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
           Button 
        </span>
        <!---->
      </button>
      <!---->
      <button
        class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <transition-stub
          appear="false"
          css="true"
          name="ant-btn-loading-icon-motion"
          persisted="false"
        >
          <!---->
        </transition-stub>
        <span>
           Button 
        </span>
        <!---->
      </button>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`tooltip demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-gap-middle"
>
  <button
    class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
      Object Style
    </span>
    <!---->
  </button>
  <!---->
  <button
    class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
       Function Style 
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`tooltip demo > renders wrap-custom-component correctly 1`] = `
<div
  data-v-app=""
>
  <span>
    This text is inside a component with the necessary events exposed.
  </span>
  <!---->
</div>
`;
